# MLOpengouins

./: .gitignore  .python-version  Makefile  PUSH_INSTRUCTIONS.md  README.md  STREAMLIT_DEPLOY.md  STREAMLIT_FIX.md  main.py  packages.txt  prepare_push.sh  pyproject.toml  requirements.in  requirements.txt
.streamlit/: config.toml
docs/: 01_Packaging_Guidelines.md  02_Experiment_Tracking_Guidelines.md
fastapi-penguins-api/: README.md  main.py  start_api.sh
frontend/: README.md  README_STREAMLIT.md  TROUBLESHOOTING.md  app.py  check_dependencies.py  index.html  server.py  start_frontend.sh  start_streamlit.sh
notebooks/: experimentation.ipynb  wine_quality_experimentation.ipynb
penguin_classifier/: MLmodel  conda.yaml  model.pkl
src/pengouins/: __init__.py  config.py  data.py  model.py  registry.py
